--- a/Project.toml
+++ b/Project.toml
@@ -3,8 +3,13 @@ uuid = "6b9d4377-42f2-4f3b-a4da-97523cb5d2a3"
 authors = ["chriselrod <elrodc@gmail.com> and contributors"]
 version = "1.0.0-DEV"
 
+[deps]
+ForwardDiff = "f6369f11-7733-5829-9624-2563aa707210"
+LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
+StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
+
 [compat]
-julia = "1.6"
+julia = "1.8"
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
